--- a/StageZero.TableHelper.csproj
+++ b/StageZero.TableHelper.csproj
@@ -9,4 +9,8 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
